@@ -1,3 +1,5 @@
+# charset
+$charset = 'US-ASCII';
 
 # Buffer selection mode
 
